# metaLBM

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  contributors.txt
cmake/: FindFFTW.cmake  FindHDF5.cmake  FindMPI.cmake  FindNVSHMEM.cmake  FindRapidXML.cmake  FindScorep.cmake
example/: CMakeLists.txt  Computation.cuh  Computation.h  Functor.h  GlobalConstexpr.cu  MathVector.h  TemplatedKernel.cu
include/metaLBM/: Algorithm.h  Algorithm.sh  Allocation.h  Analysis.h  AnalysisList.h  Analyzer.h  Boundary.h  CUDAInitializer.h  Collision.h  Commons.h  Communication.h  Computation.cuh  Computation.h  Computation.sh  Distribution.h  Domain.h  DynamicArray.cuh  DynamicArray.h  DynamicArray.sh  EntropicStep.h  Equilibrium.h  Event.cuh  Event.h  FFTWInitializer.h  Field.h  FieldList.h  Force.h  ForcingScheme.h  FourierDomain.h  Helpers.h  Initialize.h  Lattice.h  MPIInitializer.h  MathVector.h  Moment.h  Options.h  Reader.h  Routine.h  StaticArray.h  Stream.cuh  (+3 more)
input/inputJSON/: bgk-32-edm-kolmogorov-0d1-1d0.json
input/inputPy/: generate_input_h.py  input.txt
input/inputTestJSON/: elbm-edm-kolmogorov.json~  elbm-sc-kolmogorov.json~  felbm-edm-kolmogorov.json~  felbm-guo-kolmogorov.json~  kolmogorov.json~  test.json~
script/: batch_juron.sh  batch_newturb.sh  batch_psg.sh  benchmarks.py  build.sh  check_directories.sh  convert_batch.sh  fetch_and_plot_num06.sh  interactive_juron.sh  interactive_psg.sh  job.sh  job.txt  job_galileo.psb  job_galileo.txt  job_name_hpc.csve  job_newturb.psb  job_newturb.txt  job_process_newturb.txt  job_stromboli.sh  job_stromboli.txt  lbm_galileo.sh  lbm_hydra8.sh  lbm_laptop.sh  lbm_newturb.sh  lbm_on_galileo.sh  lbm_on_hydra8.sh  lbm_on_newturb.sh  lbm_on_stromboli.sh  lbm_stromboli.sh  login_newturb.sh  manage_job.sh  parse_json.py  plot.sh  plot_from_galileo.sh  plot_from_stromboli.sh  plot_on_stromboli.sh  plot_on_stromboli.sh~  process.sh  process_on_num06.sh  process_on_stromboli.sh  (+15 more)
solver/: CMakeLists.txt  Doxyfile
solver/cmake/: AsynchronatorConfig.cmake  FindFFTW.cmake  FindMPI.cmake  FindRapidXML.cmake
solver/doc/: CMakeLists.txt
solver/include/metaLBM/: Algorithm.h  Commons.h  Domain.h  EntropicStep.h  Field.h  Helpers.h  Input.h  Moment.h  Options.h  Reader.h  Routine.h
solver/src/: CMakeLists.txt
solver/src/core/: Algorithm.h  Boundary.h  Collision.h  Commons.h  Distribution.h  Domain.h  DynamicArray.h  EntropicStep.h  Equilibrium.h  Field.h  Force.h  ForcingScheme.h  Helpers.h  Initialize.h  Input.h  Lattice.h  Logging.h  MathVector.h  Moment.h  Options.h  Parameters.h  Reader.h  StaticArray.h  Writer.h  analysis.cpp~  boundary.h  calculate.h  commons.h  distribution.h  field.h  force.h  forcingScheme.h  helpers.h  init.h  input.h  lattice.h  options.h  output.h  solver.h  structure.h  (+1 more)
solver/src/cuda/: CMakeLists.txt  CMakeLists.txt~
solver/src/mpi/: CMakeLists.txt  Communication.h  Computation.h  compute.cpp  compute.h  main.cpp
solver/src/mpi_cuda/: CMakeLists.txt  CMakeLists.txt~  communication.h  compute.cpp  compute.h  ex1.cu  ex1.cu~  ex1.h  ex1.h~  kernels.cu  kernels.h  main.cpp  utils_gpu.cu  utils_gpu.h
solver/src/serial/: CMakeLists.txt  Communication.h  Computation.h  communication.h  communication.h~  compute.h  main.cpp
solver/test/: CMakeLists.txt  TestCollision.cpp  TestCommons.cpp  TestDistribution.cpp  TestDomain.cpp  TestEquilibrium.cpp  TestForce.cpp  TestInitialize.cpp  TestMathVector.cpp  TestMoment.cpp  TestWriter.cpp  all_tests.cpp  input.h  test_boundary.cpp  test_calculate.cpp  test_commons.cpp  test_distribution.cpp  test_field.cpp  test_force.cpp  test_force.cpp~  test_forcingScheme.cpp  test_lattice.cpp  test_output.cpp  test_solver.cpp
src/: CMakeLists.txt  Input.h  Input.in  Input_correctness.in  Input_prod.in  Input_prod_2d.in  Input_prod_3d.in  Input_prof.in  main.cpp  main.cu  main_mpi.cu  main_shmem.cu
test/: CMakeLists.txt  TestCollision.cpp  TestDynamicArray.cpp  TestField.cpp  TestForce.cpp  TestForcingScheme.cpp  TestLattice.cpp
